Fixing 2 layout bugs in Micromasters Program page (#4013)
* fixing weird bug where a box shows up in the top tabs

* small tweak

--- a/static/scss/program-page.scss
+++ b/static/scss/program-page.scss
@@ -75,6 +75,10 @@
         overflow-x: scroll;
         margin-left: 8px;
 
+        &::selection {
+          background: transparent !important;
+        }
+
         a {
           white-space: nowrap;
           font-weight: 400;
@@ -92,7 +96,10 @@
           line-height: 47px;
           text-transform: uppercase;
           color: rgba(255,255,255,.75);
+        }
 
+        a.tab-link::selection {
+          background: transparent !important;
         }
 
         a.active-tab {
