--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -6,8 +6,8 @@ $font-gray: #6f6f6f;
 $font-gray-light: #a0a0a0;
 $font-gray-dark: #444;
 $font-gray-disabled: rgba(0,0,0,.2);
-$link-text: #217dd4;
-$link-hover: #0074e1;
+$link-text: #0070da;
+$link-hover: #0070da;
 $sidenav-font: #b3b3b3;
 
 // MIT brand colors palette
@@ -23,7 +23,7 @@ $bg-med-green: #3cce83;
 $bg-light-blue: #ddeff7;
 $bg-light-tan: #f1efe0;
 $bg-light-gray: #f5f5f5;
-$bg-med-gray: #f1f1f1;
+$bg-med-gray: #f3f3f3;
 $bg-error: #f9a9a9;
 $black-transparent: rgba(0, 0, 0, 0.9);
 $button-color: #008acb;
